--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "hesto/multi-auth": "^2.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
