--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "2.0",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
+        "staudenmeir/dusk-updater": "1.1",
         "symfony/thanks": "^1.0"
     },
     "autoload": {
